regression/parse_pool/progtest18.sfp.out

sfc in program parse_pool/progtest18.sfp
syntax error at line 2, position 43:
configuration hello { nullApp() nullNet() start() nullRadio() } 
                                          ^
