regression/parse_pool/progtest18.sfp
# Testing erroneous program definition (invalid MAC)
configuration hello { nullApp() nullNet() start() nullRadio() } 
start hello

